--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -11,7 +11,14 @@
             android:entries="@array/pref_sensitivity_entries"
             android:entryValues="@array/pref_sensitivity_values"
             android:defaultValue="@string/pref_sensitivity_default_value" />
+        <CheckBoxPreference
+            android:key="pref_host"
+            android:title="@string/pref_host"
+            android:summary="Act as host on local network"
+            android:defaultValue="true"
+            />
     </PreferenceCategory>
+
     <PreferenceCategory
         android:key="dev_options"
         android:title="@string/pref_title_dev">
