--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -12,10 +12,10 @@
             android:entryValues="@array/pref_sensitivity_values"
             android:defaultValue="@string/pref_sensitivity_default_value" />
         <CheckBoxPreference
-            android:key="pref_host"
-            android:title="@string/pref_host"
-            android:summary="Act as host on local network"
-            android:defaultValue="true"
+            android:key="pref_mp"
+            android:title="@string/pref_mp"
+            android:summary="Play Multiplayer"
+            android:defaultValue="false"
             />
     </PreferenceCategory>
 
